# detect-sleep-state-mlops

./: .env_example  .gitattributes  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose-application.yaml  docker-compose-jenkins.yaml  docker-compose-minio-local.yaml  docker-compose-mlflow-local.yaml  pyproject.toml
app/: application.py  requirements.txt
configs/: __init__.py  config.yaml  config_reader.py
docker/: .dockerignore  dockerfile.app
helm_charts/app/: Chart.yaml  values.yaml
helm_charts/app/templates/: app_ingress.yaml  deployment.yaml
helm_charts/kube-prometheus-stack/: values.yaml
helm_charts/nginx-ingress/: values.yaml
logs/: __init__.py  logging.py
notebooks/: baseline.ipynb  make_easier_data.ipynb  rf_train.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: download_data.sh
src/steps/: train.py
src/utils/: mlflow_utils.py  task_train.py
src/utils/feature/: feature_extractor.py
src/utils/inference/: pose_inference.py
src/utils/training/: train.py
src/utils/transform/: perform_merge_data.py
terraform/: main.tf  variables.tf
