[tool.poetry]
name = "detect-sleep-states"
version = "0.1.0"
description = "A sleep state detection project"
authors = ["DatTruonggg <truongminhdat07@gmail.com>"]
readme = "README.md"
packages = [{include = "detect_sleep_states"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
tensorflow = "^2.18.0"
mlflow = "^2.20.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
loguru = "^0.7.3"
optuna = "^4.2.0"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
imblearn = "^0.0"
numpy = ">=1.26.0,<2.0.0"
dask = "^2025.1.0"
torch = "^2.6.0"
gputil = "^1.4.0"
keras = "^3.8.0"
polars = "0.18.0"
torchinfo = "^1.8.0"
psutil = "^6.1.1"
python-dotenv = "^1.0.1"
minio = "^7.2.15"
kaggle = "^1.6.17"
pytest = "^8.3.5"
lightgbm = "^4.6.0"
joblib = "^1.4.2"
catboost = "^1.2.7"
xgboost = "^2.1.4"
psycopg2 = "^2.9.10"
fastapi = "^0.115.11"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
